# diabase

./: .pre-commit-config.yaml  README.it.md  README.md  manage.py  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
agents/: crypto.py  models.py  policy.py  prompts.py  runtime.py  test_agents.py  tools.py
agents/backends/: anthropic_api.py  base.py  claude_code.py  openai_compat.py
agents/migrations/: 0001_initial.py  0002_turnevent.py  0003_agentconnection.py  0004_plan_planstep.py  0005_turn_conversation.py  0006_planstep_meta.py
audit/: admin.py  models.py  services.py  test_audit.py
audit/migrations/: 0001_initial.py
core/: adapters.py  test_adapters.py
diabase/: asgi.py  settings.py  test_settings.py  wsgi.py
instances/: adapters.py  models.py  services.py  test_adapters.py
instances/migrations/: 0001_initial.py  0002_edgefunctionsource.py
web/: auth.py  test_views.py  urls.py  views.py
web/migrations/: 0001_seed_admin.py
web/static/web/: auth.js  chat.js  context.js  diabase.css  functions.js  md.js  orb.js  particles.js  plan.js  room.js  schema.js  shell.js  sidebar.js  storage.js  timeline.js  workspace.js
workspaces/: context.py  models.py  services.py  test_context.py
workspaces/migrations/: 0001_initial.py  0002_chatmessage.py  0003_project_autonomy_level_project_system_prompt_and_more.py  0004_project_agent_connection.py  0005_chatmessage_kind_alter_project_autonomy_level.py  0006_conversation_chatmessage_conversation.py  0007_backfill_conversations.py  0008_chatmessage_conversation_required.py
(+10 files in other folders)
